# fluvio

./: Cargo.toml  README.md  RELEASE.md  cliff.toml  install.sh
.github/actions/setup-fluvio/: action.yml
.github/workflows/: benchmarks.yml  cd_dev.yaml  cd_dev_mac.yaml  cd_release.yml  ci.yml  ci_mac.yaml  connector-publish.yml  hourly.yml  merge_queue.yaml  publish.yml  release.yml  smartmodule-publish.yml  weekly.yml
actions/: action-install-fluvio-cluster.sh
connector/cargo_template/: Cargo.toml.liquid
connector/docker/: Dockerfile
crates/cdk/: Cargo.toml
crates/cdk/src/: cmd.rs  deploy.rs  main.rs  utils.rs
crates/fluvio-artifacts-util/: Cargo.toml
crates/fluvio-artifacts-util/src/: htclient.rs  lib.rs  package_meta_ext.rs  utils.rs
crates/fluvio-artifacts-util/src/fvm/: mod.rs
crates/fluvio-artifacts-util/src/fvm/api/: client.rs  download.rs
crates/fluvio-cli/: Cargo.toml
crates/fluvio-cli/src/: error.rs  lib.rs
crates/fluvio-connector-common/src/: producer.rs
crates/fluvio-connector-deployer/src/: lib.rs
crates/fluvio-connector-package/src/: metadata.rs
crates/fluvio-controlplane-metadata/tests/: k8_topic_mirror_down_v2.json
crates/fluvio-hub-protocol/: Cargo.toml
crates/fluvio-version-manager/: Cargo.toml
crates/fluvio-version-manager/src/: main.rs
crates/fluvio-version-manager/src/command/: current.rs  install.rs  list.rs  switch.rs  uninstall.rs  update.rs
crates/fluvio-version-manager/src/command/itself/: update.rs
crates/fluvio-version-manager/src/common/: manifest.rs  settings.rs  update_manager.rs  version_directory.rs  version_installer.rs
crates/fluvio-version-manager/tests/: install-fvm.sh
crates/smartmodule-development-kit/: Cargo.toml
dev-tools/: smartmodule.Dockerfile
dev-tools/log/: debug-sc-min-k8
examples/docker-compose/: Dockerfile  README.md  docker-compose.yml
k8-util/docker/: build.sh
makefiles/: build.mk  release.mk
tests/: fluvio-validate-release.sh  upgrade-test.sh
tests/cli/: cli-backward-compatibility.bash
tls/certs/: ca.crt  ca.key  ca.srl  client-root.crt  client-root.csr  client-root.key  client-user1.crt  client-user1.csr  client-user1.key  server.crt  server.csr  server.key
(+37 files in other folders)
