[package]
name = "fluvio-artifacts-util"
description = "API for getting artifacts"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
octocrab = { workspace = true, features = ["default-client", "rustls", "rustls-aws-lc-rs"]}
sha2 = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true }

fluvio-hub-protocol = { workspace = true }

